# SMSplusplus

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TODO  conanfile.py
cmake/: ClangPatch.cmake  FindEigen3.cmake  FindnetCDF.cmake  FindnetCDFCxx.cmake  SMS++Config.cmake.in
include/: AbstractBlock.h  AbstractPath.h  BendersBFunction.h  BendersBlock.h  Block.h  BlockInspection.h  BlockSolverConfig.h  BoxSolver.h  C05Function.h  C15Function.h  CDASolver.h  Change.h  ColRowSolution.h  ColVariable.h  ColVariableSolution.h  Configuration.h  Constraint.h  DQuadFunction.h  DataMapping.h  FRealObjective.h  FRowConstraint.h  FakeSolver.h  Function.h  LagBFunction.h  LinearConstraint.h  LinearFunction.h  LinearObjective.h  Modification.h  Objective.h  Observer.h  OneVarConstraint.h  PolyhedralFunction.h  PolyhedralFunctionBlock.h  RBlockConfig.h  RowConstraint.h  RowConstraintSolution.h  SMSTypedefs.h  Solution.h  Solver.h  ThinComputeInterface.h  (+4 more)
lib/: makefile  makefile-c  makefile-inc  makefile-lib
src/: AbstractBlock.cpp  BendersBFunction.cpp  BendersBlock.cpp  Block.cpp  BlockSolverConfig.cpp  BoxSolver.cpp  C05Function.cpp  ColRowSolution.cpp  ColVariable.cpp  ColVariableSolution.cpp  Configuration.cpp  Constraint.cpp  DQuadFunction.cpp  DataMapping.cpp  FRealObjective.cpp  FRowConstraint.cpp  Function.cpp  LagBFunction.cpp  LinearFunction.cpp  Objective.cpp  OneVarConstraint.cpp  PolyhedralFunction.cpp  PolyhedralFunctionBlock.cpp  RBlockConfig.cpp  RowConstraintSolution.cpp  Solver.cpp  ThinComputeInterface.cpp  Variable.cpp
test/: AbstractBlockGenerator.h  CMakeLists.txt  tests_AbstractBlock.cpp  tests_AbstractPath.cpp  tests_ColVariable.cpp  tests_Function.cpp  tests_LinearFunction.cpp
test/ClassFactory/: main.cpp  makefile
test_package/: CMakeLists.txt  conanfile.py  main.cpp
